# agentcat

./: Cargo.toml  Justfile  PKGBUILD  README.md  SPEC.md
src/: event.rs  main.rs  render.rs  style.rs
src/parse/: claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs  pi.rs
