[package]
name = "agentcat"
version = "0.1.0"
edition = "2024"
description = "Universal stream formatter for AI coding agent output"
license = "GPL-3.0-or-later"
repository = "https://github.com/rpodgorny/agentcat"
keywords = ["cli", "ai", "agent", "formatter", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
